# mazzflow

./: .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml
src/mazzflow/: __init__.py  mcp_client.py  mcp_server.py
